Closed Bug 1517062 Opened 7 years ago Closed 7 years ago

ContentBlockingLog::RecordLog() is slow due to hashtable lookup

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla66
Tracking Status
firefox66 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

See https://perfht.ml/2QZ2jH0. I knew I was going to regret using a hashtable. :-(
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/336f511efe6b Stop using a hashtable in ContentBlockingLog; r=baku
Priority: -- → P2
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla66
Assignee: nobody → ehsan
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: