Bug 1517062 - Stop using a hashtable in ContentBlockingLog; r=baku

Differential Revision: https://phabricator.services.mozilla.com/D15587